--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.1.0",
+    "@fortawesome/fontawesome-free": "^6.7.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.0.5",
+    "bootstrap": "^5.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   }
