--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/node": "^9.0.0",
     "@astrojs/react": "^4.1.0",
+    "@astrojs/tailwind": "^5.1.4",
     "@fortawesome/fontawesome-free": "^6.7.1",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.2",
     "astro": "^5.0.5",
     "bootstrap": "^5.0.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.17"
   }
 }
